--- a/index.ipynb
+++ b/index.ipynb
@@ -390,7 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = neighbo"
+    "la_boca_marker = neighborhood_markers[]"
    ]
   },
   {
